--- a/emoji-search-app/src/index.css
+++ b/emoji-search-app/src/index.css
@@ -1,3 +1,9 @@
 .container{
   background-color: burlywood;
 }
+
+.form-control{
+  width: 20%;
+  height: 90%;
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+}
