--- a/emoji-search-app/src/index.css
+++ b/emoji-search-app/src/index.css
@@ -1,9 +1,15 @@
 .container{
   background-color: burlywood;
+  text-align: center;
 }
 
 .form-control{
   width: 20%;
   height: 90%;
   font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+}
+.footer {
+  margin-top: 30px;
+  text-align: center;
+  font-family: Arial, Helvetica, sans-serif;
 }
