--- a/emoji-search-app/src/index.css
+++ b/emoji-search-app/src/index.css
@@ -1,15 +1,27 @@
 .container{
-  background-color: burlywood;
-  text-align: center;
+  background-color: greenyellow;
+  width: 100%;
+  box-shadow: rgba(0, 0, 0, 0.02) 0px 1px 3px 0px, rgba(27, 31, 35, 0.15) 0px 0px 0px 1px;
+  margin-bottom: 20px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  border-radius: 10px;
+  padding: 10px 0;
+  cursor: pointer;
+  
 }
 
-.form-control{
-  width: 20%;
-  height: 90%;
-  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-}
 .footer {
   margin-top: 30px;
   text-align: center;
   font-family: Arial, Helvetica, sans-serif;
+}
+.searchbar{
+padding: 9px 8px;
+font-size: inherit;
+border: 0;
+border-radius: 4px;
+box-shadow: rgba(0, 0, 0, 0.02) 0px 1px 3px 0px, rgba(27, 31, 35, 0.15) 0px 0px 0px 1px;
 }
