--- a/emoji-search-app/src/index.css
+++ b/emoji-search-app/src/index.css
@@ -18,10 +18,16 @@
   text-align: center;
   font-family: Arial, Helvetica, sans-serif;
 }
-.searchbar{
+.searchbarinput{
 padding: 9px 8px;
 font-size: inherit;
 border: 0;
 border-radius: 4px;
 box-shadow: rgba(0, 0, 0, 0.02) 0px 1px 3px 0px, rgba(27, 31, 35, 0.15) 0px 0px 0px 1px;
+width: 70%;
 }
+.btn{
+  border-bottom: 5px;
+  padding: 5px;
+  margin-top: 10px;
+ text-align: center;}
