--- a/emoji-search-app/src/index.css
+++ b/emoji-search-app/src/index.css
@@ -24,10 +24,21 @@ font-size: inherit;
 border: 0;
 border-radius: 4px;
 box-shadow: rgba(0, 0, 0, 0.02) 0px 1px 3px 0px, rgba(27, 31, 35, 0.15) 0px 0px 0px 1px;
-width: 70%;
 }
+
 .btn{
   border-bottom: 5px;
   padding: 5px;
   margin-top: 10px;
- text-align: center;}
+ text-align: center;
+}
+.emoji-container{
+  max-width: 1100px;
+  margin: 0 auto;
+  padding-left: 15px;
+  padding-right: 15px;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  padding-bottom: 3%;
+}
